# PupilCamCPP

./: CMakeLists.txt  FrameGrabber.cpp  FrameGrabber.hpp  FrameProcessing.cpp  README.md  example.cpp  pupilcamConfig.cmake.in  pupilcamConfigVersion.cmake.in
example/: CMakeLists.txt  example.cpp
pre-built/libusb/lib/: libusb.lib  libusbd.lib
pre-built/libuvc/: libuvcConfig.cmake  libuvcTargets-debug.cmake
pre-built/libuvc/lib/: uvc.lib  uvcd.lib
pre-built/libuvc_8/: libuvcTargets-release.cmake  libuvcTargets.cmake
pre-built/libuvc_8/lib/: uvc.lib  uvcd.lib
pre-built/libuvc_8/lib/pkgconfig/: libuvc.pc
pre-built/pthreads/include/pthreads/: pthread.h
pre-built/pupilcam/include/pupilcam/: FrameGrabber.hpp
pre-built/pupilcam/lib/: pupilcam.lib  pupilcamConfig.cmake  pupilcamConfigVersion.cmake  pupilcamTargets-debug.cmake  pupilcamTargets-release.cmake  pupilcamTargets.cmake  pupilcamd.lib
pre-built/turbojpeg/lib/Debug/: jpeg-static.lib  jpeg.lib  turbojpeg-static.lib  turbojpeg.lib
pre-built/turbojpeg/lib/Release/: jpeg-static.lib  jpeg.lib  turbojpeg-static.lib  turbojpeg.lib
pupilcam/: CMakeLists.txt  FrameGrabber.cpp  FrameGrabber.hpp  FrameProcessing.cpp  pupilcamConfig.cmake.in
